Druid-MT Set JVM GC options and log4j configuration