@@ -1,8 +1,15 @@
 -server
 -Xms3g
 -Xmx3g
+-verbose:gc
+-XX:+PrintGCDetails
+-XX:+PrintGCDateStamps
+-XX:+ExitOnOutOfMemoryError
+-Xloggc:/usr/local/druid-mt/log/gc/coordinator-%t.gc.log
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=/usr/local/druid-mt/log/gc/coordinator.hprof
 -Duser.timezone=UTC
 -Dfile.encoding=UTF-8
 -Djava.io.tmpdir=var/tmp
 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
--Dderby.stream.error.file=var/druid/derby.log
+-Dlog4j.configurationFile=/usr/local/druid-mt/conf/druid/coordinator/log4j2.xml
