@@ -2,7 +2,15 @@
 -Xms8g
 -Xmx8g
 -XX:MaxDirectMemorySize=6144m
+-verbose:gc
+-XX:+PrintGCDetails
+-XX:+PrintGCDateStamps
+-XX:+ExitOnOutOfMemoryError
+-Xloggc:/usr/local/druid-mt/log/gc/historical-%t.gc.log
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=/usr/local/druid-mt/log/gc/historical.hprof
 -Duser.timezone=UTC
 -Dfile.encoding=UTF-8
 -Djava.io.tmpdir=var/tmp
 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
+-Dlog4j.configurationFile=/usr/local/druid-mt/conf/druid/historical/log4j2.xml
