@@ -1,7 +1,15 @@
 -server
 -Xms3g
 -Xmx3g
+-verbose:gc
+-XX:+PrintGCDetails
+-XX:+PrintGCDateStamps
+-XX:+ExitOnOutOfMemoryError
+-Xloggc:/usr/local/druid-mt/log/gc/overlord-%t.gc.log
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=/usr/local/druid-mt/log/gc/overlord.hprof
 -Duser.timezone=UTC
 -Dfile.encoding=UTF-8
 -Djava.io.tmpdir=var/tmp
 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
+-Dlog4j.configurationFile=/usr/local/druid-mt/conf/druid/overlord/log4j2.xml
