@@ -3,11 +3,13 @@
 -Xms13g
 -verbose:gc
 -XX:+PrintGCDetails
--XX:+PrintGCTimeStamps
+-XX:+PrintGCDateStamps
+-XX:+ExitOnOutOfMemoryError
+-Xloggc:/usr/local/druid-mt/log/gc/router-%t.gc.log
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=/usr/local/druid-mt/log/gc/router.hprof
 -Duser.timezone=UTC
 -Dfile.encoding=UTF-8
 -Djava.io.tmpdir=var/tmp
-
--Dcom.sun.management.jmxremote.port=17071
--Dcom.sun.management.jmxremote.authenticate=false
--Dcom.sun.management.jmxremote.ssl=false
+-Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
+-Dlog4j.configurationFile=/usr/local/druid-mt/conf/druid/router/log4j2.xml
