@@ -2,6 +2,14 @@
 -Xms10g
 -Xmx10g
 -XX:MaxDirectMemorySize=6g
+-verbose:gc
+-XX:+PrintGCDetails
+-XX:+PrintGCDateStamps
+-XX:+ExitOnOutOfMemoryError
+-Xloggc:/usr/local/druid-mt/log/gc/single-%t.gc.log
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=/usr/local/druid-mt/log/gc/single.hprof
 -Duser.timezone=UTC
 -Dfile.encoding=UTF-8
 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
+-Dlog4j.configurationFile=/usr/local/druid-mt/conf/druid/single/log4j2.xml
